# google-test-mock-exercise

./: CMakeLists.txt  LICENSE.md  README.md
include/: Awards.h  Hailstone.h  Triangle.h
lib/: Awards.cpp  CMakeLists.txt  Hailstone.cpp  Triangle.cpp
test/: AwardsTests.cpp  CMakeLists.txt  HailstoneTests.cpp  TriangleTests.cpp
test/lib/googlemock/: CMakeLists.txt
test/mocks/: MockAwardCeremonyActions.h  MockRankList.h
